--- a/and-bible/app/src/main/res/values-sv/strings.xml
+++ b/and-bible/app/src/main/res/values-sv/strings.xml
@@ -2,9 +2,10 @@
 <resources>
   <string name="app_name">And Bible</string>
   <!--Startup & Help-->
-  <string name="splash_top_text">\n\"Och Gud sade:\'Varde ljus,\'och det vart ljus.\"\nMos 1:3</string>
-  <string name="help_text">Tryck på Meny-knappen för alternativ\n\nBläddra till nästa och föregående kapitel genom att swipa åt höger och vänster med fingret eller rulla med styrkulan.</string>
-  <string name="help_text_long"><b>Navigation</b>\nGå till nästa och föregående kapitel genom att swipa åt höger och vänster med fingret eller rulla med styrkulan. \nDubbelklicka för att slå på eller av helskärmsvisning. \n\n<b>Meny</b> \nTryck på Meny-knappen för alternativ \n\nFör att ladda ner fler böcker, väj Meny / Hämta böcker. \n\n<b>Läs upp</b>\nVälj Meny / Mer... / Läs upp för att komma till sidan som styr uppläsning \n\n<b>Anteckningar</b>\nAnteckningar kan läggas till direkt i versens snabbmeny. Listan med sparade anteckningar finns i Meny / Anteckningar. \n\n<b>Bokmärken</b>\nBokmärken kan läggas till direkt i versens snabbmeny. Listan med sparade bokmärken finns under bokmärkesikonen i menylisten. Där kan du även gruppera dina bokmärken med hjälp av etiketter. \n\n<b>Sök</b>\nSöktermer kan innehålla specialtecken som *, ?, AND, OR, NOT (sök på \"Apache Lucene - Query Parser Syntax\" för fler detaljer) \n\n<b>Snabbmenyer</b> \nTryck länge på en vers för att öppna en snabbmeny med alternativ för aktuell vers. \nTryck länge på en bok i bokväljaren för att radera den eller se mer information. \nTryck länge på bakåtknappen för att visa historiken.</string>
+  <string name="splash_top_text">
+\n\"Gud sade: \'Varde ljus!\' Och det blev ljus.\"\n1 Mos 1:3</string>
+  <string name="help_text">Tryck på Meny-knappen för alternativ\n\nBläddra till nästa och föregående kapitel genom att svepa åt höger och vänster med fingret eller rulla med styrkulan.</string>
+  <string name="help_text_long"><b>Navigation</b>\nGå till nästa och föregående kapitel genom att svepa åt höger och vänster med fingret eller rulla med styrkulan. \nDubbelklicka för att slå på eller av helskärm. \n\n<b>Meny</b> \nTryck på Meny-knappen för alternativ \n\nFör att ladda ner fler böcker, väj Meny / Hämta böcker. \n\n<b>Läs upp</b>\nVälj Meny / Mer... / Läs upp för att komma till sidan som styr uppläsning \n\n<b>Anteckningar</b>\nAnteckningar kan läggas till direkt i versens snabbmeny. Listan med sparade anteckningar finns i Meny / Anteckningar. \n\n<b>Bokmärken</b>\nBokmärken kan läggas till direkt i versens snabbmeny. Listan med sparade bokmärken finns under bokmärkesikonen i menylisten. Där kan du även gruppera dina bokmärken med hjälp av etiketter. \n\n<b>Sök</b>\nSöktermer kan innehålla specialtecken som *, ?, AND, OR, NOT (sök på \"Apache Lucene - Query Parser Syntax\" för fler detaljer) \n\n<b>Snabbmenyer</b> \nTryck länge på en vers för att öppna en snabbmeny med alternativ för aktuell vers. \nTryck länge på en bok i bokväljaren för att radera den eller se mer information. \nTryck länge på bakåtknappen för att visa historiken.</string>
   <string name="version_text">Version %s</string>
   <string name="no_sdcard_error">Vänligen mata in ett SD-kort och starta om And Bible.</string>
   <!--Main menu-->
@@ -16,6 +17,7 @@
   <string name="speak">Läs upp</string>
   <string name="help">Hjälp</string>
   <string name="verse">Vers</string>
+  <string name="administration">Administration</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Välj bok</string>
   <string name="choosePassageChapterName">Välj kapitel</string>
@@ -122,6 +124,12 @@
   <string name="too_many_jobs">För många aktiviteter körs. Vänligen vänta tills några är klara och försök igen.</string>
   <string name="document_not_installed">Vänligen ladda ner \'%s\'</string>
   <!--Install zip file-->
+  <string name="install_zip">Lägg in bok från zip-fil</string>
+  <string name="install_zip_successfull">Modulen installerades utan problem</string>
+  <string name="extracting_zip_file">Extraherar zip-fil...</string>
+  <string name="checking_zip_file">Undersöker vald fil...</string>
+  <string name="invalid_module">Filen innehåller inte en giltig SWORD-modul</string>
+  <string name="module_already_installed">Filen innehåller en modul som redan är installerad</string>
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">Läsningsplan</string>
   <string name="rdg_plan_selector_title">Välj en läsningsplan</string>
@@ -143,11 +151,9 @@
   <string name="delete_doc">Radera %s?</string>
   <string name="delete_search_index_doc">Radera indexet för %s?</string>
   <!--Verse context menu-->
-  <string name="select_text">Markera text</string>
-  <string name="select_text_help">Dra långsamt för att markera.\nTryck sedan för att kopiera.</string>
   <string name="notes">Fotnoter och referenser</string>
-  <string name="copy">Kopiera aktuell vers</string>
-  <string name="share_verse">Dela aktuell vers ...</string>
+  <string name="copy">Kopiera</string>
+  <string name="share_verse">Dela  …</string>
   <string name="share_verse_subject">En bibelvers har delats med dig från And Bible</string>
   <string name="compare_translations">Jämför översättningar</string>
   <!--Bookmarks-->
@@ -206,6 +212,7 @@
   <string name="restore_confirmation">Skriv över anteckningar och bokmärken?</string>
   <string name="restore_success">Anteckningar och bokmärken återställda från %s på SD-kortet</string>
   <!--About-->
+  <string name="about_copyright">Copyright: %s</string>
   <string name="about_version">Version: %s</string>
   <!--Document types-->
   <string name="doc_type_bible">Bibel</string>
@@ -230,6 +237,7 @@
   <string name="new_item">Ny</string>
   <string name="close">Stäng</string>
   <!--Errors-->
+  <string name="report_error">Skicka rapport</string>
   <string name="error_occurred">Det har skett ett fel</string>
   <string name="error_no_content">Innehåll saknas för den markerade versen</string>
   <string name="error_page_too_large">Sidan är för stor för att laddas</string>
