--- a/and-bible/app/src/main/res/values-zh/strings.xml
+++ b/and-bible/app/src/main/res/values-zh/strings.xml
@@ -134,11 +134,9 @@
   <string name="delete_doc">删除 %s</string>
   <string name="delete_search_index_doc">删除 %s 的索引</string>
   <!--Verse context menu-->
-  <string name="select_text">选择文本</string>
-  <string name="select_text_help">按住然后在屏幕上轻轻滑动来选择文本，\n然后触摸来复制已经选择的文本。</string>
   <string name="notes">备注</string>
   <string name="copy">复制</string>
-  <string name="share_verse">分享</string>
+  <string name="share_verse">分享 …</string>
   <string name="share_verse_subject">您的朋友与您分享了如下的圣经</string>
   <string name="compare_translations">译文比较</string>
   <!--Bookmarks-->
